--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "browserify": "^17.0.0",
     "dotenv": "^16.0.3",
     "ipfs-http-client": "^60.0.0",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-datepicker": "^4.16.0",
